changed conversion technique to be error-free (according to FindBugs)